# alian

./: .dockerignore  .gitignore  Dockerfile  README.md  install_with_yasp.sh  requirements.txt
.github/workflows/: docker.yml
alian/: CMakeLists.txt  __init__.py
alian/analysis/GammaJetAnalysis/: binned_histogram_generation.py  gamma_jet_analysis.py
alian/analysis/base/: __init__.py  analysis.py  cluster.py  csubtractor.py  cuts.py  event.py  histogram.py  histograms.py  jet_finder.py  logging.py  logs.py  output.py  selection.py  selections.py  selector.py  track.py  utils.py
alian/analysis/example/: basic_analysis.py  example_analysis.py  example_rdf.py  merge.sh  qa_ext.py
alian/analysis/leadjets/: leadjets_data.py  leadjets_pythia_emb.py
alian/analysis/photon_eec/: analysis.py
alian/analysis/test/: read_data.py  test.py
alian/config/: pythia-pp-hardQCD-5TeV-Dire.cmnd  pythia-pp-hardQCD-5TeV-Monash.cmnd  pythia-pp-hardQCD-5TeV-Vincia.cmnd  run2_tstruct.yaml  run3_tstruct.yaml
alian/config/cEEC/: Kphi.yaml  bg_cones.yaml  bias.yaml  dire.yaml  dire_20.yaml  hg.yaml  monash.yaml  qg.yaml  resonance.yaml  strange.yaml  strong.yaml  vincia.yaml
alian/config/dire_in/: settings_1.cmnd  settings_2.cmnd  settings_3.cmnd
alian/config/example/: data.yaml  example_analysis.yaml  example_rdf.yaml  qa.yaml
alian/config/gamma_eec/: data.yaml  dataCuts.yaml  ref.yaml  trg_eff_high.yaml  trg_eff_low.yaml
alian/config/photon_eec/: default.yaml  incl.yaml
alian/config/pythia_in/: settings.cmnd  settings_1.cmnd  settings_10.cmnd  settings_11.cmnd  settings_12.cmnd  settings_13.cmnd  settings_14.cmnd  settings_15.cmnd  settings_16.cmnd  settings_17.cmnd  settings_18.cmnd  settings_19.cmnd  settings_2.cmnd  settings_20.cmnd  settings_3.cmnd  settings_4.cmnd  settings_5.cmnd  settings_6.cmnd  settings_7.cmnd  settings_8.cmnd  settings_9.cmnd  settings_bias.cmnd
alian/config/pythia_incl_136/: settings_1.cmnd  settings_10.cmnd  settings_11.cmnd  settings_12.cmnd  settings_13.cmnd  settings_14.cmnd  settings_15.cmnd  settings_16.cmnd  settings_17.cmnd  settings_18.cmnd  settings_19.cmnd  settings_2.cmnd  settings_20.cmnd  settings_3.cmnd  settings_4.cmnd  settings_5.cmnd  settings_6.cmnd  settings_7.cmnd  settings_8.cmnd  settings_9.cmnd
alian/config/pythia_photon_136/: settings_11.cmnd  settings_12.cmnd  settings_13.cmnd  settings_14.cmnd  settings_17.cmnd  settings_18.cmnd  settings_19.cmnd  settings_6.cmnd  settings_8.cmnd
alian/config/pythia_photon_in/: settings_1.cmnd  settings_10.cmnd  settings_15.cmnd  settings_16.cmnd  settings_2.cmnd  settings_20.cmnd  settings_3.cmnd  settings_4.cmnd  settings_5.cmnd  settings_7.cmnd  settings_9.cmnd
alian/exec/: draw_from_yaml.py
alian/fastsim/: pythia_eec_incl.py
alian/io/: data_io.py  pythia_io.py  root_io.py
alian/sandbox/: analysis.py  base_analysis.py  data_io.py  draw_from_yaml.py  draw_jet_pt.sh  example_run.sh  generate_analysis_yaml_config.py  jet_analysis.py  jet_analysis_pythia_emb.py  process_jinja2.py  pythia_fj_jupyter.ipynb  pythia_io.py  requirements.txt  root_output.py  run2_tstruct.yaml  run3_tstruct.yaml  run_emb_test.sh  simple_jet_analysis.py  simple_loop_over_data.py  simple_loop_over_data_whistograms.py  tdraw_event_char.yaml  tdraw_jetpt.yaml  test_analysis.py  test_custom_shower.py  test_embedding.py  whats_next.md
alian/sandbox/cEEC/: pythia_cw.py  pythia_otf_ceec.py  pythia_otf_ceec_bg.py  pythia_otf_ceec_fulljet.py  pythia_otf_hg.py  pythia_otf_qg.py  sherpa_otf_ceec.py
alian/sandbox/charm/: charm_fractions.root.draw  draw_charm.draw  graph_event.py  pythia_charm.py  pythia_charm_process.py  pythia_charm_process_tn_parton_h.root.draw  pythia_charm_track.py  run_parallel.sh  run_tdraw_charm.sh  tdraw_charm.yaml  tdraw_charm_template.yaml
alian/sandbox/eec/: example.sh  hist.root.draw  pythia8_pp.cmnd  pythia8_simple_eec.py  tdraw_eec_dp.yaml
alian/sandbox/jet_axis/: pythia_jet_axis.py
alian/sandbox/jse/: .gitignore  dead_cone_lund_notebook.ipynb  jewel2jetsparquet.py  lund_eec.py  lund_jet.py  lunds_from_jewel.ipynb  lunds_pairplot.ipynb  lunds_pairplot.py  make_sample_lundjet.sh  make_trajectory_plots.sh  pythia_jse.py  read_jewel.ipynb  requirements.txt  (+7 more)
alian/src/: CMakeLists.txt
alian/src/demo/: CMakeLists.txt  demo.cxx  demo.hh
alian/src/fjutil/: CMakeLists.txt  fjutil.cxx  fjutil.hh
alian/steer/: glob.py  tqdm.py
alian/utils/: data_fj.py  misc.py  pprints.py  pythia_fj.py  treewriter.py
yasp_recipe/alian/: current.module  current.sh
(+55 files in other folders)
